@@ -1,3 +1,2 @@
-EBUILD cl-wireless-meta-11.6-r1.ebuild 1150 RMD160 1019fe5de1e6e0b54adab0eccc312fd06c2319af SHA1 659117ff5540704cfb0fdeb2f90f67e585a63f4d SHA256 95cc954f8856f611b919e37d89443b5606dc1f0c3109bbb626d42109a0c544a7
-EBUILD cl-wireless-meta-11.6.ebuild 924 RMD160 2e85ef1701a0d8940ebd96ce91c7da43ff106c33 SHA1 b8f97814ecdfb5acd7991d78e62a5201d6bdb545 SHA256 1960ddb6a76280cd597a517618786d21120773e7c6639c62bff3b98e2624ff3f
-MISC ChangeLog 2682 RMD160 c71ba0843fb22f90fd685a46fbee33a98b939dfd SHA1 696af2d992a31d088b5cee915aa471f4cf52457c SHA256 645b9815b975730e0d8d3575376b8a24eeb617a4fdf8b3bda91aed83910b95b7
+EBUILD cl-wireless-meta-11.6-r2.ebuild 1126 RMD160 0dd156483a8a8c94d600b33c5eba33e5b2fe411d SHA1 553b2cf716fdcf897b5fd8530279413cb3334428 SHA256 73bde46124b9aaaec6ff934aa4db5914ef2a403dd3394c3e42da1f43dc6c1af4
+MISC ChangeLog 2924 RMD160 68a74c1e2878779b23117a153666064e0a939f04 SHA1 c21473f443df41d3b333d4a68a77aa52b7e11dae SHA256 1d36be3fb446656df51cf7448cf992fbe1053863e23ecdcf76985eb6aad61b93
