@@ -8,6 +8,7 @@ net-misc/asterisk alsa dahdi span speex vorbis
 net-misc/asterisk-extra-sounds alaw g722 g729 siren14 siren7 sln16 ulaw wav
 net-misc/asterisk-moh-opsound alaw g722 g729 siren14 siren7 sln16 ulaw wav
 net-misc/asterisk-core-sounds alaw g722 g729 siren14 siren7 sln16 ulaw wav
+net-nds/openldap syslog
 net-proxy/squid icap-client
 net-ftp/proftpd -ipv6 -acl
 net-fs/samba -samba
