@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-wireless-meta-11.6-r2 (31 Aug 2011)
+
+  31 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-wireless-meta-11.6.ebuild, -cl-wireless-meta-11.6-r1.ebuild,
+  +cl-wireless-meta-11.6-r2.ebuild:
+  remove net-wireless/rtl8192se
+
 *cl-wireless-meta-11.6-r1 (22 Jun 2011)
 
   22 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
